@@ -1,6 +1,7 @@
 ART 5.0
 * Added Greek translation (thanks to Manos Pappas)
 * Fix for pivottable error with pt_BR localization
+* Added BigQuery JDBC driver
 
 ART 4.18
 * Allow editing of datasource in multiple report edit
